# mtsa

./: .gitignore  Dockerfile  Iforest_experiments.py  Iforest_test.ipynb  MTSA.ipynb  README.md  experimentRunner.py  experiment_analyser.py  experiment_final_ci.ipynb  experiment_final_ci2.ipynb  experiment_ood_general_ci.ipynb  ganf_experiment_out_of_distribution.py  generic_experiment_out_of_distribution.py  hitachi_experiment_out_of_distribution.py  iForest_experiment_final.ipynb  iForest_experiment_final.py  iForest_experiment_final2.ipynb  iForest_experiment_final2.py  iForest_experiment_ood.ipynb  iForest_experiment_ood_ci.ipynb  iForest_experiment_out_of_distribution.py  iForest_experiment_out_of_distribution2.py  iForest_fan_experiments.ipynb  iForest_new_experiments.py  keybindings.json  pyproject.toml  ransyncoders_experiment_out_of_distribution.py  requirements.txt  sample.txt  setup.cfg  transformer_moretest.ipynb  transformer_test.ipynb
.devcontainer/: devcontainer.json
examples/: MTSA.ipynb  MTSA_+_SHAP.ipynb  analysis.ipynb  nb_atelier.ipynb
experiment_final/: slider_id_00_n_estimators-10_max_features-0.5_contamination-0.01_max_samples-128.csv
experiments/: isolationforest_Fan_id_06_with_Array2Mfcc_and_features.csv  resultados_isolationforest_Fan_id_06_without_Array2Mfcc.csv
experiments_hyperparameter/: fan_id_00_n_estimators-100.0_contamination-0.01_max_samples-128.0_max_features-1.0.csv  fan_id_00_n_estimators-100.0_contamination-0.01_max_samples-256.0_max_features-0.75.csv  (+117 more)
mtsa/: __init__.py  common.py  correlation_networks.py  experiments.py  (+5 more)
(+660 files in other folders)
