[metadata]
name = mtsa
version = 0.0.7
author = Diego Pinheiro
author_email = diegompin@gmail.com
url = https://github.com/diegompin/mtsa
description = Multiple Time Series Analysis
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mtsa, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas==1.5.2
    pytest==7.2.0
    numpy==1.23.4 
    matplotlib==3.6.2
    scipy==1.10.0
    ipykernel==6.16.0
    librosa==0.9.2
    scikit-learn==1.2.0
    tensorflow==2.11.0
    keras==2.11.0