# TODO: This file needs to be adjusted
[metadata]
name = mtsa
version = 0.1.7
author = Diego Pinheiro
author_email = diegompin@gmail.com
url = https://github.com/diegompin/mtsa
description = Multiple Time Series Analysis
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mtsa, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas==2.2.2
    pytest==7.2.0
    numpy==1.24.4
    matplotlib==3.8.0
    scipy==1.11.2
    ipykernel==5.5.6
    librosa==0.9.2
    tensorflow==2.17.0
    spectrum==0.6.8
    torch==2.5.1
